feat: add readiness endpoint
